...
  // ignore: use_super_parameters
  RegisterForm({
    Key? key,
    required this.onTap,
  }) : super(key: key);

  final List<String> _roles = ['doctor', 'hospital'];

  @override
  Widget build(BuildContext context) {
    final counterStore = Provider.of<ViewModel>(context);
    return Observer(
        builder: (_) => Column(
              children: <Widget>[
                TextField(
                  key: const Key('usernameField'),
                  onChanged: _registerStore.setUsername,
                  decoration: const InputDecoration(
                    labelText: 'Username',
                  ),
                ),
                TextField(
                  key: const Key('passwordField'),
                  onChanged: _registerStore.setPassword,
                  decoration: const InputDecoration(
                    labelText: 'Password',
                  ),
                  obscureText: true,
                ),
                DropdownButton<String>(
                  key: const Key('roleDropdown'),
                  value: _registerStore.role,
                  hint: const Text('Select Role'),
                  items: _roles.map((String value) {
                    return DropdownMenuItem<String>(
                      value: value,
                      child: Text(value),
...
                  onChanged: _registerStore.setRole,
                ),
                if (_registerStore.role == 'doctor')
                  SpecialtyDropdownMenu(specialties: counterStore.specialties, onSelected: _registerStore.setSpecialty),
                if (_registerStore.role == 'doctor')
                  TextField(
                    key: const Key('localizationField'),
                    onChanged: _registerStore.setLocalization,
                    decoration: const InputDecoration(
                      labelText: 'Localization',
                    ),
                  ),
                ElevatedButton(
                  key: const Key('registerButton'),
                  onPressed: () => onPressed(context, counterStore, _registerStore, onTap),
                  child: const Text('Register'),
                )
              ],
            ));
  }
}

...
