...
              onTap: () {
                _onItemTapped(Page.login);
                Navigator.pop(context);
              },
            ),
            ListTile(
              title: const Text('Show Users'),
              selected: _selectedPage == Page.showUsers,
              onTap: () {
                _onItemTapped(Page.showUsers);
                Navigator.pop(context);
              },
            ),
...
