...

    return Padding(
      padding: const EdgeInsets.all(16.0),
      child: Column(
        children: <Widget>[
          TextField(
            key: const Key('loginUsernameField'),
            onChanged: loginStore.setUsername,
            decoration: const InputDecoration(
              labelText: 'Username',
            ),
          ),
          TextField(
            key: const Key('loginPasswordField'),
            onChanged: loginStore.setPassword,
            decoration: const InputDecoration(
              labelText: 'Password',
            ),
            obscureText: true,
          ),
          ElevatedButton(
            key: const Key('loginButton'),
            onPressed: () => onPressed(context, counterStore, loginStore, onTap),
            child: const Text('Login'),
          ),
        ],
      ),
    );
  }
}
...
